tests/jtrrouter/errors/straight_only_deprecated/errors.jtrrouter
Warning: Please note that using ';' as list separator is deprecated and not accepted anymore.
Error: The defaults for turnings must be a tuple of at least two numbers divided by ','.
Quitting (on error).
